environments/production/raw/headless-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-headless
  namespace: techx-tf4
spec:
  clusterIP: None
  ports:
    - name: tcp-service
      port: 8080
      targetPort: 8080
  selector:
    opentelemetry.io/name: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog-headless
  namespace: techx-tf4
spec:
  clusterIP: None
  ports:
    - name: tcp-service
      port: 8080
      targetPort: 8080
  selector:
    opentelemetry.io/name: product-catalog
