environments/production/raw/ingress.yaml
# Owner: Huy Hoàng nhóm CDO_04
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techx-alb-ingress
  namespace: techx-tf4
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-proxy
                port:
                  number: 8080
